# AIV

./: .gitmodules  .qmake.conf  AIV.pro  CMakeLists.txt
AIV/: AIV.pro  CMakeLists.txt  CameraReader.cpp  CameraRreader.h  FrameProvider.cpp  FrameProvider.h  VideoFilter.cpp  VideoFilter.h  VideoItem.cpp  VideoItem.h  VideoPreprocessor.cpp  VideoPreprocessor.h  VideoProcessor.cpp  VideoProcessor.h  VideoStreamer.cpp  VideoStreamer.hpp  main.cpp  main.qml
AIV/filters/: panoramastitcher.cpp  panoramastitcher.h  stabilizationfeatures.cpp  stabilizationfeatures.hpp
AIV/preprocessors/: grayscale.cpp  grayscale.h  homography.cpp  homography.h
AIV/processors/: peopledetect.cpp  peopledetect.h
AIV/streaming/: LiveStreamer.cpp  LiveStreamer.hpp  VideoEncoder.cpp  VideoEncoder.hpp  live555.h
FFmpeg/: CMakeLists.txt
features/: aiv_common.prf  aiv_sum.prf  aiv_third_party_config.prf
libmfx/: CMakeLists.txt  libmfx.pc.cmake
live555/: CMakeLists.txt
opencv/: CMakeLists.txt  opencv-clang.patch  opencv-linux.patch  opencv-win.patch  opencv.pro
qthttpserver/: CMakeLists.txt
x264/: CMakeLists.txt  libx264.pc.cmake
