cmake_minimum_required(VERSION 3.9 FATAL_ERROR)

#set(BUILD_opencv_apps OFF CACHE BOOL "")
#set(BUILD_opencv_aruco OFF CACHE BOOL "")
#set(BUILD_opencv_bgsegm OFF CACHE BOOL "")
#set(BUILD_opencv_bioinspired OFF CACHE BOOL "")
#set(BUILD_opencv_calib3d OFF CACHE BOOL "")
#set(BUILD_opencv_ccalib OFF CACHE BOOL "")
#set(BUILD_opencv_core OFF CACHE BOOL "")
#set(BUILD_opencv_cvv OFF CACHE BOOL "")
#set(BUILD_opencv_datasets OFF CACHE BOOL "")
#set(BUILD_opencv_dnn OFF CACHE BOOL "")
#set(BUILD_opencv_dnn_objdetect OFF CACHE BOOL "")
#set(BUILD_opencv_dpm OFF CACHE BOOL "")
#set(BUILD_opencv_face OFF CACHE BOOL "")
#set(BUILD_opencv_features2d OFF CACHE BOOL "")
#set(BUILD_opencv_flann OFF CACHE BOOL "")
#set(BUILD_opencv_fuzzy OFF CACHE BOOL "")
#set(BUILD_opencv_hfs OFF CACHE BOOL "")
#set(BUILD_opencv_highgui OFF CACHE BOOL "")
#set(BUILD_opencv_img_hash OFF CACHE BOOL "")
#set(BUILD_opencv_imgcodecs OFF CACHE BOOL "")
#set(BUILD_opencv_imgproc OFF CACHE BOOL "")
#set(BUILD_opencv_java_bindings_generator OFF CACHE BOOL "")
#set(BUILD_opencv_js OFF CACHE BOOL "")
#set(BUILD_opencv_line_descriptor OFF CACHE BOOL "")
#set(BUILD_opencv_ml OFF CACHE BOOL "")
#set(BUILD_opencv_objdetect OFF CACHE BOOL "")
#set(BUILD_opencv_optflow OFF CACHE BOOL "")
#set(BUILD_opencv_phase_unwrapping OFF CACHE BOOL "")
#set(BUILD_opencv_photo OFF CACHE BOOL "")
#set(BUILD_opencv_plot OFF CACHE BOOL "")
#set(BUILD_opencv_python_bindings_generator OFF CACHE BOOL "")
#set(BUILD_opencv_reg OFF CACHE BOOL "")
#set(BUILD_opencv_rgbd OFF CACHE BOOL "")
#set(BUILD_opencv_saliency OFF CACHE BOOL "")
#set(BUILD_opencv_shape OFF CACHE BOOL "")
#set(BUILD_opencv_stereo OFF CACHE BOOL "")
#set(BUILD_opencv_stitching OFF CACHE BOOL "")
#set(BUILD_opencv_structured_light OFF CACHE BOOL "")
#set(BUILD_opencv_superres OFF CACHE BOOL "")
#set(BUILD_opencv_surface_matching OFF CACHE BOOL "")
#set(BUILD_opencv_text OFF CACHE BOOL "")
#set(BUILD_opencv_tracking OFF CACHE BOOL "")
#set(BUILD_opencv_ts OFF CACHE BOOL "")
#set(BUILD_opencv_video OFF CACHE BOOL "")
#set(BUILD_opencv_videoio OFF CACHE BOOL "")
#set(BUILD_opencv_videostab OFF CACHE BOOL "")
#set(BUILD_opencv_world OFF CACHE BOOL "")
#set(BUILD_opencv_xfeatures2d OFF CACHE BOOL "")
#set(BUILD_opencv_ximgproc OFF CACHE BOOL "")
#set(BUILD_opencv_xobjdetect OFF CACHE BOOL "")
#set(BUILD_opencv_xphoto OFF CACHE BOOL "")
#
#set(WITH_MATLAB OFF CACHE BOOL "")
#set(WITH_VTK OFF CACHE BOOL "")
#set(WITH_WEBP OFF CACHE BOOL "")
#set(WITH_OPENEXR OFF CACHE BOOL "")
#set(WITH_IPP OFF CACHE BOOL "")
#set(WITH_TIFF OFF CACHE BOOL "")
#set(WITH_1394 OFF CACHE BOOL "")
#set(WITH_ADE OFF CACHE BOOL "")
#set(WITH_IPP OFF CACHE BOOL "")
#
#set(BUILD_opencv_core ON CACHE BOOL "")
#set(BUILD_opencv_videoio ON CACHE BOOL "")
#set(BUILD_opencv_imgproc ON CACHE BOOL "")
#set(BUILD_opencv_imgcodecs ON CACHE BOOL "")
#set(BUILD_opencv_tracking ON CACHE BOOL "")
#set(BUILD_opencv_video ON CACHE BOOL "")
#set(BUILD_opencv_plot ON CACHE BOOL "")
#set(BUILD_opencv_videostab ON CACHE BOOL "")
#set(BUILD_opencv_features2d ON CACHE BOOL "")
#set(BUILD_opencv_flann ON CACHE BOOL "")
#set(BUILD_opencv_photo ON CACHE BOOL "")
#set(BUILD_opencv_calib3d ON CACHE BOOL "")
#set(BUILD_opencv_saliency ON CACHE BOOL "")
#set(BUILD_opencv_imgproc ON CACHE BOOL "")
#set(BUILD_opencv_core ON CACHE BOOL "")
#set(BUILD_opencv_features2d ON CACHE BOOL "")
#set(BUILD_opencv_imgproc ON CACHE BOOL "")
#set(BUILD_opencv_imgproc ON CACHE BOOL "")
#set(WITH_ffmpeg ON CACHE BOOL "")

set(WITH_QT ON CACHE BOOL "")
set(WITH_GTK OFF CACHE BOOL "")
set(WITH_GTK_2_X OFF CACHE BOOL "")
set(WITH_VTK OFF CACHE BOOL "")

## WebP does not compile with Clang under Windows
#set(WITH_WEBP OFF CACHE BOOL "")
#set(BUILD_WEBP OFF CACHE BOOL "")
## LibTIFF does not compile with Cland under Windows
#set(WITH_TIFF OFF CACHE BOOL "")
#set(BUILD_TIFF OFF CACHE BOOL "")

set(OPENCV_EXTRA_MODULES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/opencv_contrib/modules" CACHE PATH "")

add_subdirectory(opencv)
